--- a/templates/menu-logout.html
+++ b/templates/menu-logout.html
@@ -1,1 +1,1 @@
-<li><a href="?do=session&amp;action=logout&amp;token={{{token}}}">{{user}} abmelden</a></li>
+<li><a href="?do=session&amp;action=logout&amp;token={{{token}}}"><b>{{user}}</b> (abmelden)</a></li>
