DB-Support, add user functionality

--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -1,12 +1,13 @@
 <div class="container">
 	<form class="form-signin" action="?do=session" method="post">
 		<h2 class="form-signin-heading">Anmeldung</h2>
-		<input type="text" name="user" class="form-control" placeholder="Benutzername" autofocus>
+		<input type="text" name="user" class="form-control" placeholder="Benutzerkennung" autofocus>
 		<input type="password" name="pass" class="form-control" placeholder="Passwort">
 		<label class="checkbox">
 			<input type="checkbox" name="remember" value="remember-me"> Angemeldet bleiben
 		</label>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Anmelden</button>
+		<a class="btn btn-lg btn-primary btn-block" href="">Registrieren</a>
 		<input type="hidden" name="action" value="login">
 	</form>
 </div>
