--- a/style/default.css
+++ b/style/default.css
@@ -7,6 +7,11 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
+.form-adduser {
+  max-width: 600px;
+  padding: 10px;
+  margin: 0 auto;
+}
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
@@ -14,7 +19,8 @@ body {
 .form-signin .checkbox {
   font-weight: normal;
 }
-.form-signin .form-control {
+.form-signin .form-control,
+.form-adduser .form-control {
   position: relative;
   font-size: 16px;
   height: auto;
@@ -23,7 +29,7 @@ body {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
-.form-signin .form-control:focus {
+.form-control:focus {
   z-index: 2;
 }
 .form-signin input[type="text"] {
