First version of basic minilinux configuration

--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -7,7 +7,7 @@
 			<input type="checkbox" name="remember" value="remember-me"> Angemeldet bleiben
 		</label>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Anmelden</button>
-		<a class="btn btn-lg btn-primary btn-block" href="">Registrieren</a>
+		<a class="btn btn-lg btn-primary btn-block" href="?do=adduser">Registrieren</a>
 		<input type="hidden" name="action" value="login">
 	</form>
 </div>
