--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -11,14 +11,14 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="?do=main">Startseite</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li class="active"><a href="?do=main">Start</a></li>
+				<li><a href="#about">Hilfe</a></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="#">Format C:</a></li>
-						<li><a href="#">Kompaliere Kernel</a></li>
+						<li><a href="?do=baseconfig">Basis</a></li>
+						<li><a href="?do=authconfig">Authentifizierung</a></li>
+						<li><a href="?do=printconfig">Drucken</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Nav header</li>
 						<li><a href="#">1</a></li>
@@ -26,8 +26,6 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="http://www.openslx.org/">OpenSLX</a></li>
-				<li><a href="http://mltk.boot.openslx.org/">mltk</a></li>
 				{{{loginPanel}}}
 			</ul>
 		</div>
