--- a/templates/page-main.html
+++ b/templates/page-main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 	<h1>Willkommen, {{user}}</h1>
-	<p>Du hast es geschafft. dich einzuloggen. Starker Typ!</p>
+	<p>Du hast es geschafft, dich einzuloggen. Starker Typ!</p>
 	<p>Du bist der Beste! Du bist der Größte! Ein Hoch auf {{user}}!</p>
 </div>
 
