--- a/templates/page-baseconfig.html
+++ b/templates/page-baseconfig.html
@@ -21,5 +21,6 @@
 		<input type="hidden" name="token" value="{{token}}">
 		<button class="btn btn-lg btn-primary" type="submit">Speichern</button>
 		<button class="btn btn-lg btn-primary" type="reset">Zurücksetzen</button>
+		<a class="btn btn-lg btn-primary" href="api.php?do=getconfig">Download</a>
 	</form>
 </div>
