Working on download of remote configs

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -17,7 +17,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="?do=baseconfig">Basis</a></li>
-						<li><a href="?do=authconfig">Authentifizierung</a></li>
+						<li><a href="?do=sysconfig">System</a></li>
 						<li><a href="?do=printconfig">Drucken</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Nav header</li>
