Add custom config.tgz upload functionality

--- a/templates/page-tgz-list.html
+++ b/templates/page-tgz-list.html
@@ -6,5 +6,15 @@
 		<div class="row well well-sm">Keine Konfigurationspakete gefunden!</div>
 	{{/files}}
 	<a class="btn btn-lg btn-primary" href="?do=sysconfig&amp;action=remotelist">Konfigurationen herunterladen</a>
-	<a class="btn btn-lg btn-primary" href="?do=sysconfig&amp;action=upload">Eigene Konfiguration hochladen</a>
+	<a class="btn btn-lg btn-primary" href="#" data-toggle="collapse" data-target="#uploadform">Eigene Konfiguration hochladen</a>
+	<div class="collapse" id="uploadform">
+		<div class="well well-sm" style="margin: 5px 0px">
+			<form method="post" action="?do=sysconfig" enctype="multipart/form-data">
+				<input type="file" size="40" class="form-control" name="customtgz">
+				<input type="hidden" name="action" value="upload">
+				<input type="hidden" name="token" value="{{token}}">
+				<button class="btn btn-primary form-control-addon" type="submit">Hochladen</button>
+			</form>
+		</div>
+	</div>
 </div>
