--- a/templates/download-error.html
+++ b/templates/download-error.html
@@ -1,1 +1,1 @@
-<div class="alert alert-danger">Downloading {{file}} from {{remote}} failed! ({{code}})</div>
+<div class="alert alert-danger">Downloading {{file}} {{#remote}} from {{remote}} {{/remote}} failed! ({{code}})</div>
