--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">OpenSLX Admin</a>
+			<a class="navbar-brand" href="?do=main">OpenSLX Admin</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
@@ -16,8 +16,9 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="?do=baseconfig">Basis</a></li>
-						<li><a href="?do=sysconfig">System</a></li>
+						<li><a href="?do=minilinux">MiniLinux</a></li>
+						<li><a href="?do=baseconfig">KonfigurationsVariablen</a></li>
+						<li><a href="?do=sysconfig">SystemKonfiguration</a></li>
 						<li><a href="?do=printconfig">Drucken</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Nav header</li>
