Notify about missing options/files/actions on dashboard

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -19,7 +19,7 @@
 						<li><a href="?do=minilinux">MiniLinux</a></li>
 						<li><a href="?do=baseconfig">KonfigurationsVariablen</a></li>
 						<li><a href="?do=sysconfig">SystemKonfiguration</a></li>
-						<li><a href="?do=printconfig">Drucken</a></li>
+						<li><a href="?do=ipxe">iPXE</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Nav header</li>
 						<li><a href="#">1</a></li>
