--- a/templates/page-baseconfig.html
+++ b/templates/page-baseconfig.html
@@ -9,7 +9,7 @@
 				<textarea name="setting[{{setting}}]" class="form-control" cols="30" rows="3">{{value}}</textarea>
 				{{/big}}
 				{{^big}}
-				<input type="text" name="setting[{{setting}}]" class="form-control" size="30" value="{{value}}">
+				<input type="text" name="setting[{{setting}}]" class="form-control" size="30" value="{{value}}" placeholder="{{defaultvalue}}">
 				{{/big}}
 			</div>
 			<div class="col-md-6">
