--- a/templates/page-remote-tgz-list.html
+++ b/templates/page-remote-tgz-list.html
@@ -1,3 +1,8 @@
+<ol class="breadcrumb">
+	<li><a href="?do=main">Start</a></li>
+	<li><a href="?do=sysconfig">SystemKonfiguration</a></li>
+	<li class="active">Zentral verfügbare Konfigurationen</li>
+</ol>
 <div class="container">
 	{{#files}}
 		<div class="panel panel-default">
