--- a/templates/page-main.html
+++ b/templates/page-main.html
@@ -1,11 +1,23 @@
 <div class="jumbotron">
 	<h1>Willkommen, {{user}}</h1>
-	<p>Dies ist die bwLehrpool Konfigurationsoberfläche, {{user}}</p>
+	<p>Dies ist die bwLehrpool Konfigurationsoberfläche.</p>
 	{{#ipxe}}
 		<div class="alert alert-warning">
 			<p>Das iPXE-Modul des Servers ist veraltet oder nicht vorhanden.</p>
 			<a class="btn btn-large btn-primary" href="?do=ipxe">iPXE compilieren</a>
 		</div>
 	{{/ipxe}}
+	{{#minilinux}}
+		<div class="alert alert-warning">
+			<p>Wichtige Dateien der MiniLinux-Installation fehlen.</p>
+			<a class="btn btn-large btn-primary" href="?do=minilinux">MiniLinux herunterladen</a>
+		</div>
+	{{/minilinux}}
+	{{#sysconfig}}
+		<div class="alert alert-warning">
+			<p>Es wurde noch keine Systemkonfiguration ausgewählt..</p>
+			<a class="btn btn-large btn-primary" href="?do=sysconfig">Systemkonfiguration festlegen</a>
+		</div>
+	{{/sysconfig}}
 </div>
 
