--- a/templates/page-syslog.html
+++ b/templates/page-syslog.html
@@ -1,6 +1,18 @@
 <div class="container">
 	<h1>Client Log</h1>
-	<table class="table table-striped">
+	<form method="post" action="?do=syslog">
+		<div class="input-group">
+			<span class="input-group-addon">Filter</span>
+			<input id="filterstring" type="text" class="form-control" placeholder="event-id" value="{{filter}}" name="filter">
+			<span class="input-group-addon">
+				<input type="checkbox" name="not" {{#not}}checked="checked"{{/not}}> not
+			</span>
+			<span class="input-group-btn">
+				<button class="btn btn-default" type="submit">Los</button>
+			</span>
+		</div>
+	</form>
+	<table class="table table-striped table-condensed">
 		<thead>
 			<th></th>
 			<th>Wann</th>
@@ -11,7 +23,7 @@
 		<tbody>
 		{{#list}}
 			<tr>
-				<td><span class="glyphicon glyphicon-off"></span></td>
+				<td><span class="glyphicon glyphicon-off" title="{{logtypeid}}" onclick="$('#filterstring').val($('#filterstring').val() + ' {{logtypeid}}')"></span></td>
 				<td class="text-right" nowrap="nowrap">{{date}}</td>
 				<td>{{clientip}}</td>
 				<td>{{description}}</td>
