--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -11,8 +11,8 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="?do=main">Start</a></li>
 				<li><a href="#about">Hilfe</a></li>
+				<li><a href="?do=syslog">Client Logs</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
