--- a/templates/page-baseconfig.html
+++ b/templates/page-baseconfig.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h1>Basiskonfiguration</h1>
-	<form action="?do=baseconfig" method="post">
+	<form action="?do=BaseConfig" method="post">
 		{{#categories}}
 		<div class="panel panel-default">
 			<div class="panel-heading">{{category_name}}</div>
