--- a/templates/page-main.html
+++ b/templates/page-main.html
@@ -4,19 +4,19 @@
 	{{#ipxe}}
 		<div class="alert alert-warning">
 			<p>Das iPXE-Modul des Servers ist veraltet oder nicht vorhanden.</p>
-			<a class="btn btn-large btn-primary" href="?do=ipxe">iPXE compilieren</a>
+			<a class="btn btn-large btn-primary" href="?do=iPxe">iPXE compilieren</a>
 		</div>
 	{{/ipxe}}
 	{{#minilinux}}
 		<div class="alert alert-warning">
 			<p>Wichtige Dateien der MiniLinux-Installation fehlen.</p>
-			<a class="btn btn-large btn-primary" href="?do=minilinux">MiniLinux herunterladen</a>
+			<a class="btn btn-large btn-primary" href="?do=MiniLinux">MiniLinux herunterladen</a>
 		</div>
 	{{/minilinux}}
 	{{#sysconfig}}
 		<div class="alert alert-warning">
 			<p>Es wurde noch keine Systemkonfiguration ausgewählt..</p>
-			<a class="btn btn-large btn-primary" href="?do=sysconfig">Systemkonfiguration festlegen</a>
+			<a class="btn btn-large btn-primary" href="?do=SysConfig">Systemkonfiguration festlegen</a>
 		</div>
 	{{/sysconfig}}
 </div>
