--- a/templates/page-remote-tgz-list.html
+++ b/templates/page-remote-tgz-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-	<li><a href="?do=main">Start</a></li>
-	<li><a href="?do=sysconfig">SystemKonfiguration</a></li>
+	<li><a href="?do=Main">Start</a></li>
+	<li><a href="?do=SysConfig">SystemKonfiguration</a></li>
 	<li class="active">Zentral verfügbare Konfigurationen</li>
 </ol>
 <div class="container">
