--- a/templates/sysconfig/custom-fileselect.html
+++ b/templates/sysconfig/custom-fileselect.html
@@ -1,4 +1,4 @@
-<form role="form" method="post" action="?do=sysconfig&amp;action=addmodule&amp;step={{step}}">
+<form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<input type="hidden" name="modid" value="{{modid}}">
 	<div class="input-group">
 		<span class="input-group-addon">Modulname</span>
