--- a/templates/sysconfig/custom-upload.html
+++ b/templates/sysconfig/custom-upload.html
@@ -6,7 +6,7 @@
 <p>Beispiel: Enthält das hochgeladene Archiv eine Datei <strong>etc/beispiel.conf</strong>,
 	so wird auf einem gebooteten Client diese Datei als <strong>/etc/beispiel.conf</strong> zu finden sein.</p>
 
-<form role="form" enctype="multipart/form-data" method="post" action="?do=sysconfig&amp;action=addmodule&amp;step={{step}}">
+<form role="form" enctype="multipart/form-data" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<div class="input-group">
 		<span class="input-group-addon">Archiv</span>
 		<input class="form-control" type="file" name="modulefile">
