--- a/templates/dialog-generic.html
+++ b/templates/dialog-generic.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="modal-dialog">
+	<div class="modal-dialog slx-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h4 class="modal-title">{{title}}</h4>
