--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -7,19 +7,19 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="?do=main">OpenSLX Admin</a>
+			<a class="navbar-brand" href="?do=Main">OpenSLX Admin</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="#about">Hilfe</a></li>
-				<li><a href="?do=syslog">Client Logs</a></li>
+				<li><a href="?do=SysLog">Client Logs</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="?do=minilinux">MiniLinux</a></li>
-						<li><a href="?do=baseconfig">KonfigurationsVariablen</a></li>
-						<li><a href="?do=sysconfig">SystemKonfiguration</a></li>
-						<li><a href="?do=ipxe">iPXE</a></li>
+						<li><a href="?do=MiniLinux">MiniLinux</a></li>
+						<li><a href="?do=BaseConfig">KonfigurationsVariablen</a></li>
+						<li><a href="?do=SysConfig">SystemKonfiguration</a></li>
+						<li><a href="?do=iPxe">iPXE</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Nav header</li>
 						<li><a href="#">1</a></li>
