--- a/templates/page-adduser.html
+++ b/templates/page-adduser.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-adduser" action="?do=adduser" method="post">
+	<form class="form-adduser" action="?do=AddUser" method="post">
 		<h2 class="form-signin-heading">Benutzer anlegen</h2>
 		<div class="row">
 			<div class="col-md-4">Benutzerkennung</div>
