--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-signin" action="?do=session" method="post">
+	<form class="form-signin" action="?do=Session" method="post">
 		<h2 class="form-signin-heading">Anmeldung</h2>
 		<input type="text" name="user" class="form-control" placeholder="Benutzerkennung" autofocus>
 		<input type="password" name="pass" class="form-control" placeholder="Passwort">
@@ -7,7 +7,7 @@
 			<input type="checkbox" name="remember" value="remember-me"> Angemeldet bleiben
 		</label>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Anmelden</button>
-		<a class="btn btn-lg btn-primary btn-block" href="?do=adduser">Registrieren</a>
+		<a class="btn btn-lg btn-primary btn-block" href="?do=AddUser">Registrieren</a>
 		<input type="hidden" name="action" value="login">
 	</form>
 </div>
