--- a/templates/page-main-guest.html
+++ b/templates/page-main-guest.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 	<h1>Willkommen</h1>
 	<p>Dies ist das Administrations-Interface der lokalen bwLehrpool-Installation. Bitte authentifizieren Sie sich, um Einstellungen vorzunehmen.</p>
-	<p><a  href="?do=session&amp;action=login" class="btn btn-primary btn-lg">Anmelden &raquo;</a></p>
+	<p><a  href="?do=Session&amp;action=login" class="btn btn-primary btn-lg">Anmelden &raquo;</a></p>
 </div>
