--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -16,13 +16,14 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li class="dropdown-header">Client</li>
 						<li><a href="?do=MiniLinux">MiniLinux</a></li>
 						<li><a href="?do=BaseConfig">KonfigurationsVariablen</a></li>
 						<li><a href="?do=SysConfig">SystemKonfiguration</a></li>
-						<li><a href="?do=iPxe">iPXE</a></li>
 						<li class="divider"></li>
-						<li class="dropdown-header">Nav header</li>
-						<li><a href="#">1</a></li>
+						<li class="dropdown-header">Server</li>
+						<li><a href="?do=ServerSetup">Grundkonfiguration</a></li>
+						<li><a href="?do=iPxe">iPXE</a></li>
 					</ul>
 				</li>
 			</ul>
