--- a/templates/sysconfig/ad-finish.html
+++ b/templates/sysconfig/ad-finish.html
@@ -3,8 +3,8 @@
 </p>
 
 <div id="zeug">
-	<div data-tm-id="{{tm-tgz}}" data-tm-log="message">Konfiguration erzeugen</div>
-	<div data-tm-id="{{tm-ldadp}}" data-tm-log="message" data-tm-callback="ldapCb">ldadp starten</div>
+	<div data-tm-id="{{tm-config}}" data-tm-log="error">Konfiguration erzeugen</div>
+	<div data-tm-id="{{tm-ldadp}}" data-tm-log="error" data-tm-callback="ldapCb">ldadp starten</div>
 </div>
 <br>
 <div id="back" class="pull-left" style="display:none">
