--- a/templates/sysconfig/ad-checkconnection.html
+++ b/templates/sysconfig/ad-checkconnection.html
@@ -3,8 +3,7 @@
 </p>
 
 <div id="zeug">
-	<div data-tm-id="{{tm-search}}" data-tm-progress="progress">LDAP Test-Query</div>
-	<div data-tm-id="{{tm-dummy}}" data-tm-progress="progress" data-tm-callback="ldapCb">Dummy</div>
+	<div data-tm-id="{{tm-search}}" data-tm-log="messages" data-tm-callback="ldapCb">LDAP Test-Query</div>
 </div>
 <br>
 <div class="pull-left">
