--- a/templates/page-sysconfig-main.html
+++ b/templates/page-sysconfig-main.html
@@ -1,7 +1,3 @@
-<ol class="breadcrumb">
-	<li><a href="?do=Main">Start</a></li>
-	<li class="active">SystemKonfiguration</li>
-</ol>
 <div class="container">
 	<div class="panel panel-default">
 		<div class="panel-heading">
@@ -12,7 +8,7 @@
 			<form method="post" action="?do=SysConfig">
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="config">
-				<table>
+				<table class="slx-table">
 				{{#configs}}
 					<tr>
 						<td>{{config}}</td>
@@ -57,7 +53,7 @@
 			<form method="post" action="?do=SysConfig">
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="module">
-				<table>
+				<table class="slx-table">
 				{{#modules}}
 					<tr>
 						<td>{{module}}</td>
