--- a/templates/serversetup/ipaddress.html
+++ b/templates/serversetup/ipaddress.html
@@ -7,7 +7,8 @@
 			<p>
 				Bitte wählen Sie die IP-Adresse, über die der Server von den Clients zum Booten angesprochen werden soll.
 			</p>
-			<form method="post">
+			<form method="post" action="?do=ServerSetup">
+				<input type="hidden" name="action" value="ip">
 				<input type="hidden" name="token" value="{{token}}">
 				<table>
 					{{#ips}}
@@ -26,6 +27,10 @@
 					</tr>
 					{{/ips}}
 				</table>
+				<p>
+					Das Bootmenü muss nach einer Änderung der IP-Adresse neu generiert werden. In der Regel geschieht dies
+					automatisch, der Vorgang kann in der Sektion <b>Bootmenü</b> allerdings auch manuell ausgelöst werden.
+				</p>
 			</form>
 		</div>
 	</div>
