--- a/templates/serversetup/ipxe.html
+++ b/templates/serversetup/ipxe.html
@@ -1,21 +1,67 @@
 <div class="container">
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			iPXE Menü
-		</div>
-		<div class="panel-body">
-			<p>
-				Das iPXE-Menü muss nach einer Änderung der IP-Adresse neu generiert werden. In der Regel geschieht dies
-				automatisch, der Vorgang kann hier allerdings auch manuell ausgelöst werden. In diesem Feld sehen Sie außerdem
-				die Log-Ausgaben der letzten Ausführung, falls noch im Cache.
-			</p>
-			<div data-tm-id="{{taskid}}" data-tm-log="output">Status</div>
-		</div>
-		<div class="panel-footer">
-			<form method="post">
-				<input type="hidden" name="token" value="{{token}}">
+	<form method="post" action="?do=ServerSetup">
+		<input type="hidden" name="action" value="ipxe">
+		<input type="hidden" name="token" value="{{token}}">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				Bootmenü
+			</div>
+			<div class="panel-body">
+				<p>
+					Hier können Anpassungen am Erscheinungsbild des Bootmenüs vorgenommen werden.
+				</p>
+				<br>
+
+				<div class="form-group">
+					<strong>Standard-Bootverhalten</strong>
+					<label class="radio"><input type="radio" name="defaultentry" value="net" {{active-net}}> bwLehrpool</label>
+					<label class="radio"><input type="radio" name="defaultentry" value="hdd" {{active-hdd}}> Lokale HDD</label>
+					<label class="radio"><input type="radio" name="defaultentry" value="custom" {{active-custom}}> &quot;my-entry&quot;</label>
+				</div>
+
+				<div class="form-group">
+					<strong>Anzeigedauer des Menüs</strong>
+					<div class="input-group form-narrow">
+						<input type="text" class="form-control" name="timeout" value="{{timeout}}" pattern="\d+">
+						<span class="input-group-addon">Sekunden</span>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<strong>Benutzerdefinierter Menüzusatz</strong> <a class="btn btn-default btn-xs" data-toggle="modal" data-target="#help-custom"><span class="glyphicon glyphicon-question-sign"></span></a>
+					<textarea class="form-control" name="custom">{{custom}}</textarea>
+				</div>
+
+
+				<br>
+				<div data-tm-id="{{taskid}}" data-tm-log="error"> Status</div>
+			</div>
+			<div class="panel-footer">
 				<button class="btn btn-primary" name="action" value="ipxe">Bootmenü erzeugen</button>
-			</form>
+			</div>
+		</div>
+	</form>
+</div>
+
+<div class="modal fade" id="help-custom" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">Benutzerdefinierter Menüzusatz</div>
+			<div class="modal-body">
+				Hier haben Sie die Möglichkeit, eigenen Menü-Code zum angezeigten PXE-Menü hinzuzufügen,
+				um z.B. auf weitere PXE-Server zu verweisen. Das Format entspricht dem syslinux Menüformat.
+				<br>Bespiel:
+				<pre>LABEL my-entry
+	MENU LABEL ^Mein Eintrag
+	KERNEL http://1.2.3.4/kernel
+	INITRD http://1.2.3.4/initramfs-stage31
+	APPEND custom=option
+	IPAPPEND 3</pre>
+				Sie können ein oder mehrere Einträge erzeugen. Wenn Sie einen Eintrag erzeugen möchten, der
+				automatisch gestartet wird, wenn der Benutzer keine Auswahl tätigt, vergeben Sie als LABEL <strong>my-entry</strong>
+				und wählen Sie als <strong>Standard-Bootverhalten</strong> ebenfalls <strong>my-entry</strong>.
+			</div>
+			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">Schließen</a></div>
 		</div>
 	</div>
 </div>
