--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -23,6 +23,7 @@
 						<li class="divider"></li>
 						<li class="dropdown-header">Server</li>
 						<li><a href="?do=ServerSetup">Grundkonfiguration</a></li>
+						<li><a href="?do=VmStore">VM Speicherort</a></li>
 					</ul>
 				</li>
 			</ul>
