--- a/style/default.css
+++ b/style/default.css
@@ -54,7 +54,8 @@ body {
 }
 
 .slx-ga {
-	min-width: 7em;
+	min-width: 8em;
+	text-align: left;
 }
 
 .slx-dialog {
@@ -93,4 +94,8 @@ body {
 .slx-table td {
 	padding-right: 5px;
 	padding-bottom: 2px;
+}
+
+.input-group {
+	margin-bottom: 2px;
 }
