Fixed some bugs from Sateserver v05

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -17,9 +17,9 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">Client</li>
-						<li><a href="?do=MiniLinux">MiniLinux</a></li>
+						<li><a href="?do=SysConfig">Lokalisierung</a></li>
+						<li><a href="?do=MiniLinux">bwLehrpool Mini-Linux</a></li>
 						<li><a href="?do=BaseConfig">KonfigurationsVariablen</a></li>
-						<li><a href="?do=SysConfig">SystemKonfiguration</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">Server</li>
 						<li><a href="?do=ServerSetup">Grundkonfiguration</a></li>
