--- a/templates/sysconfig/ad-checkconnection.html
+++ b/templates/sysconfig/ad-checkconnection.html
@@ -13,6 +13,7 @@
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
+		<input name="home" value="{{home}}" type="hidden">
 		<button type="submit" class="btn btn-primary">&laquo; Zurück</button>
 	</form>
 </div>
@@ -23,6 +24,7 @@
 		<input name="searchbase" value="{{searchbase}}" type="hidden">
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
+		<input name="home" value="{{home}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary">Überspringen &raquo;</button>
 	</form>
 </div>
